--- a/Plus or Minus/Base.lproj/Main.storyboard
+++ b/Plus or Minus/Base.lproj/Main.storyboard
@@ -26,11 +26,11 @@
             </objects>
             <point key="canvasLocation" x="-1369" y="101"/>
         </scene>
-        <!--View Controller-->
+        <!--Current Week View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Plus_or_Minus" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="CurrentWeekViewController" customModule="Plus_or_Minus" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="TYB-8N-ICM"/>
                         <viewControllerLayoutGuide type="bottom" id="mPn-MW-2SX"/>
