--- a/Plus or Minus/Base.lproj/Main.storyboard
+++ b/Plus or Minus/Base.lproj/Main.storyboard
@@ -38,51 +38,47 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wHH-CS-sQx">
-                                <rect key="frame" x="16" y="64" width="343" height="603"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="s8o-ky-sqK">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2CM-XH-g9v">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="lol" id="QVn-VG-6bu">
-                                        <rect key="frame" x="0.0" y="0.0" width="151" height="151"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="151" height="151"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="weekCell" rowHeight="80" id="NY2-V4-wKM" customClass="WeekTableViewCell" customModule="Plus_or_Minus" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="NY2-V4-wKM" id="6rq-Ry-yB7">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yalla" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rc0-y4-vvH">
-                                                    <rect key="frame" x="58" y="65" width="36" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18.08.1997 - 24.08.1997" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8fF-Y3-Xkv">
+                                                    <rect key="frame" x="95" y="29.5" width="185" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-                                        </view>
-                                        <color key="backgroundColor" red="0.1259149909" green="0.81746035809999995" blue="0.50288313630000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstItem="Rc0-y4-vvH" firstAttribute="centerY" secondItem="QVn-VG-6bu" secondAttribute="centerY" id="uly-xL-WKl"/>
-                                            <constraint firstItem="Rc0-y4-vvH" firstAttribute="centerX" secondItem="QVn-VG-6bu" secondAttribute="centerX" id="vSM-ms-KCP"/>
-                                        </constraints>
-                                        <size key="customSize" width="151" height="151"/>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
+                                            <constraints>
+                                                <constraint firstItem="8fF-Y3-Xkv" firstAttribute="centerY" secondItem="6rq-Ry-yB7" secondAttribute="centerY" id="SOO-BH-lIf"/>
+                                                <constraint firstItem="8fF-Y3-Xkv" firstAttribute="centerX" secondItem="6rq-Ry-yB7" secondAttribute="centerX" id="a6n-Ly-7p4"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.25579045402567252" green="0.78636579949238583" blue="0.46765590113356253" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <outlet property="label" destination="8fF-Y3-Xkv" id="hq9-Cg-erC"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="wHH-CS-sQx" firstAttribute="trailing" secondItem="JnZ-MK-AXQ" secondAttribute="trailingMargin" id="9w3-wV-SOy"/>
-                            <constraint firstItem="EkI-U5-i8K" firstAttribute="top" secondItem="wHH-CS-sQx" secondAttribute="bottom" id="Q60-sw-4Ab"/>
-                            <constraint firstItem="wHH-CS-sQx" firstAttribute="top" secondItem="GQd-eb-NWY" secondAttribute="bottom" id="gqR-Jv-Jb3"/>
-                            <constraint firstItem="wHH-CS-sQx" firstAttribute="leading" secondItem="JnZ-MK-AXQ" secondAttribute="leadingMargin" id="wjb-D0-2sE"/>
+                            <constraint firstItem="s8o-ky-sqK" firstAttribute="leading" secondItem="JnZ-MK-AXQ" secondAttribute="leading" id="JCw-Le-dw6"/>
+                            <constraint firstItem="EkI-U5-i8K" firstAttribute="top" secondItem="s8o-ky-sqK" secondAttribute="bottom" id="MbS-bB-dRG"/>
+                            <constraint firstItem="s8o-ky-sqK" firstAttribute="top" secondItem="GQd-eb-NWY" secondAttribute="bottom" id="gu9-hw-YjX"/>
+                            <constraint firstAttribute="trailing" secondItem="s8o-ky-sqK" secondAttribute="trailing" id="uqK-nw-stk"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="collection" destination="wHH-CS-sQx" id="ue2-QI-Nkt"/>
+                        <outlet property="tableView" destination="s8o-ky-sqK" id="4zU-he-bmO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PiK-9h-C9k" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -209,7 +205,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6eS-Go-JPo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1053.5999999999999" y="100.29985007496252"/>
+            <point key="canvasLocation" x="1052" y="126"/>
         </scene>
         <!--New Action View Controller-->
         <scene sceneID="peH-gp-nR4">
@@ -276,7 +272,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hSe-bY-Jb4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2197.5999999999999" y="99.400299850074973"/>
+            <point key="canvasLocation" x="2207" y="125"/>
         </scene>
     </scenes>
 </document>
